name:                glabsrv
version:             0.1.0.0
synopsis:            s
description:         d
homepage:            https://github.com/chrislf/glabsrv#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Linton-Ford
maintainer:          chrislf@freeshell.org
copyright:           GPLv2
category:            Computers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-client
                     , transformers
                     , text
  default-language:    Haskell2010

executable glabsrv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glabsrv
                     , servant-client
                     , http-client
                     , http-client-tls
  default-language:    Haskell2010

test-suite glabsrv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , glabsrv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrislf/glabsrv
